Se terminan de realizar los cambios para el nuevo requerimiento del sgad